hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ^~ /.well-known/acme-challenge/ {
        default_type "text/plain";
        allow all;
        proxy_pass http://cm-acme-http-solver-krhw7:8089;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: hworld.manticore-labs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
  tls:
  - hosts:
    - hworld.manticore-labs.com
    secretName: hello-world-tls
